Fix addMovieToCustomer unit test